# finsims

./: .pre-commit-config.yaml  create_config_diffusionts.py  create_gbm_dataset.py  gbm.py  heston.py  pyproject.toml  requirements.txt
src/finsims/: bootstrap_sampling.py  create_config_diffusionts.py  create_gbm_dataset.py  create_mjd_dataset.py  create_real_dataset.py  gbm.py  heston.py  jsonl_utils.py  mjd.py  transformations.py  wavelet_transformations.py
src/finsims/config/: gbm_config.json  mjd_config.json  mjd_config_easy.json  mjd_config_hard.json  mjd_config_medium.json
