[tool.poetry]
name = "finsims"
version = "0.1.0"
description = ""
authors = ["Mykhailo Briazkalo <mbriazka@uwaterloo.ca>"]
readme = "README.md"
packages = [{include = "finsims", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scipy = "^1.14.0"
jupyter = "^1.1.1"
pywavelets = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
