[tool.poetry]
name = "finsims"
version = "0.1.0"
description = ""
authors = ["Mykhailo Briazkalo <mbriazka@uwaterloo.ca>"]
readme = "README.md"
packages = [{include = "finsims", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
numpy = "*"
matplotlib = "*"
seaborn = "^0.13.2"
scipy = "*"
jupyter = "^1.1.1"
pywavelets = "*"
yfinance = "^0.2.43"
statsmodels = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
